# creativeProject7

./: README.md
MicroclimateBackend/: CMakeLists.txt  main.cpp
MicroclimatePanel/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
